--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
       "subtitle": "Search the tasks on azure devops",
       "description": "This command retrives the task list from azure devops organisation",
       "mode": "view"
+    },
+    {
+      "name": "list-tasks",
+      "title": "List Tasks",
+      "subtitle": "Search the tasks on azure devops",
+      "description": "This command retrives the task list from azure devops organisation",
+      "mode": "view"
     }
   ],
   "preferences": [
