--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "azure-tasks",
   "title": "Azure Tasks",
-  "description": "List the tasks for Azure Devops ",
+  "description": "List the work items from Azure Devops",
   "icon": "extension-icon.png",
   "author": "gabriel_turetchi",
   "categories": [
@@ -15,7 +15,7 @@
       "name": "search-tasks",
       "title": "Search Tasks",
       "subtitle": "Search the tasks on azure devops",
-      "description": "This command retrives the task list from azure devops organisation",
+      "description": "This command retrives the work items from azure devops organisation",
       "mode": "view"
     }
   ],
